add navigation bar

--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,47 @@
 </head>
 
 <body>
+  <div class="navbar navbar-default navbar-static-top" role="navigation" bs-navbar>
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">
+        <span class="glyphicon glyphicon-film"></span>
+        My
+        <strong>Shows</strong>
+      </a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li data-match-route="/$"><a href="/">Home</a>
+      </li>
+      <li data-match-route="/add"><a href="/add">Add</a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav pull-right" ng-if="!currentUser">
+      <li data-match-route="/login"><a href="/login">Login</a>
+      </li>
+      <li data-match-route="/signup"><a href="/signup">Sign up</a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav pull-right" ng-if="currentUser">
+      <li class="navbar-text" ng-bind="currentUser.email"></li>
+      <li><a href="javascript:void(0)" ng-click="logout()">Logout</a>
+      </li>
+    </ul>
+  </div>
 
   <div ng-view></div>
 
   <!-- Vendor Dependencies -->
-  <script scr="vendor/angular.js"></script>
-  <script scr="vendor/angular-strap.js"></script>
-  <script scr="vendor/angular-strap.tpl.js"></script>
-  <script scr="vendor/angular-messages.js"></script>
-  <script scr="vendor/angular-resource.js"></script>
-  <script scr="vendor/angular-route.js"></script>
-  <script scr="vendor/angular-cookies.js"></script>
-  <script scr="vendor/moment.min.js"></script>
+  <script src="vendor/angular.js"></script>
+  <script src="vendor/angular-strap.js"></script>
+  <script src="vendor/angular-strap.tpl.js"></script>
+  <script src="vendor/angular-messages.js"></script>
+  <script src="vendor/angular-resource.js"></script>
+  <script src="vendor/angular-route.js"></script>
+  <script src="vendor/angular-cookies.js"></script>
+  <script src="vendor/moment.min.js"></script>
+
+  <!-- Client-site Dependencies -->
+  <script src="app.js"></script>
 </body>
 
 </html>
