add data schemas for shows and users

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,8 @@
 
   <!-- Client-site Dependencies -->
   <script src="app.js"></script>
+  <script src="controllers/main.js"></script>
+  <script src="services/show.js"></script>
 </body>
 
 </html>
