add method for adding page

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
   <!-- Client-site Dependencies -->
   <script src="app.js"></script>
   <script src="controllers/main.js"></script>
+  <script src="controllers/add.js"></script>
   <script src="services/show.js"></script>
 </body>
 
