--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
   <script src="app.js"></script>
   <script src="controllers/main.js"></script>
   <script src="controllers/add.js"></script>
+  <script src="controllers/detail.js"></script>
+  <script src="filters/fromNow.js"></script>
   <script src="services/show.js"></script>
 </body>
 
