--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
   <script src="controllers/detail.js"></script>
   <script src="filters/fromNow.js"></script>
   <script src="services/show.js"></script>
+  <script src="services/subscription.js"></script>
 </body>
 
 </html>
