--- a/public/index.html
+++ b/public/index.html
@@ -40,28 +40,32 @@
 
   <div ng-view></div>
 
-  <!-- Vendor Dependencies -->
-  <script src="vendor/angular.js"></script>
-  <script src="vendor/angular-strap.js"></script>
-  <script src="vendor/angular-strap.tpl.js"></script>
-  <script src="vendor/angular-messages.js"></script>
-  <script src="vendor/angular-resource.js"></script>
-  <script src="vendor/angular-route.js"></script>
-  <script src="vendor/angular-cookies.js"></script>
-  <script src="vendor/moment.min.js"></script>
+  <!-- Minified version -->
+  <script src="app.min.js"></script>
+  <script src="templates.js"></script>
 
-  <!-- Client-site Dependencies -->
-  <script src="app.js"></script>
-  <script src="controllers/main.js"></script>
-  <script src="controllers/add.js"></script>
-  <script src="controllers/detail.js"></script>
-  <script src="controllers/signup.js"></script>
-  <script src="controllers/login.js"></script>
-  <script src="filters/fromNow.js"></script>
-  <script src="services/show.js"></script>
-  <script src="services/subscription.js"></script>
-  <script src="services/auth.js"></script>
-  <script src="directives/repeatPassword.js"></script>
+<!--   Vendor Dependencies
+<script src="vendor/angular.js"></script>
+<script src="vendor/angular-strap.js"></script>
+<script src="vendor/angular-strap.tpl.js"></script>
+<script src="vendor/angular-messages.js"></script>
+<script src="vendor/angular-resource.js"></script>
+<script src="vendor/angular-route.js"></script>
+<script src="vendor/angular-cookies.js"></script>
+<script src="vendor/moment.min.js"></script>
+
+Client-site Dependencies
+<script src="app.js"></script>
+<script src="controllers/main.js"></script>
+<script src="controllers/add.js"></script>
+<script src="controllers/detail.js"></script>
+<script src="controllers/signup.js"></script>
+<script src="controllers/login.js"></script>
+<script src="filters/fromNow.js"></script>
+<script src="services/show.js"></script>
+<script src="services/subscription.js"></script>
+<script src="services/auth.js"></script>
+<script src="directives/repeatPassword.js"></script> -->
 </body>
 
 </html>
